'ejs模板文件构建'

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "vue_template",
+  "name": "<%= name %>",
   "version": "0.1.0",
-  "private": true,
+  "private": "<%= private %>",
+  "author": "<%= author %>",
+  "description": "<%= description %>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
